Edited Team page

--- a/src/assets/i18n/bn-IN.json
+++ b/src/assets/i18n/bn-IN.json
@@ -35,14 +35,15 @@
     "name.pkg": "ডাঃ প্রশান্ত কুমার ঘোষ",
     "name.anand": "আনন্দ মোহন",
     "name.ananya": "অনন্যা মুগুলি",
+    "name.lancelot": "ডাঃ ল্যানস্লট মার্ক পিন্টো",
     "name.neeraj": "ডাঃ নীরজ শর্মা",
     "name.prashant": "প্রশান্ত কৃষ্ণান",
     "name.nirmala": "ডাঃ আর নির্মলা",
-    "name.raksheet": "Raksheet ভাট",
     "name.rohit": "রোহিত কুমার",
     "name.shreyas": "Shreyas Ramoji",
     "name.srikanth": "Srikanth রাজ Chetupalli",
     "place.iisc": "IISc বেঙ্গালুরু",
+    "place.hinduja": "পি.ডি. হিন্দুজা হাসপাতাল, মুম্বাই",
     "place.cmu": "CMU মার্কিন যুক্তরাষ্ট্র",
     "place.cogknit": "Cogknit শব্দার্থিক",
     "place.upgrad": "upGrad",
@@ -54,6 +55,7 @@
     "team.title.mtech_sp": "MTech (সংকেত প্রক্রিয়াজাতকরণ)",
     "team.title.post_doc": "পোস্ট ডক্টোরাল ফেলো",
     "team.title.mo": "মেডিকেল অফিসার",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "সফটওয়্যার ইঞ্জিনিয়ার",
     "team.title.phd": "পিএইচডি স্কলার",
     "team.areas.sriram": "ভাষ্য সনাক্তকরণটিতে, ডিপ লার্নিং, স্নায়ুবিজ্ঞান",
@@ -61,6 +63,8 @@
     "team.areas.anand": "কন্ঠ সনান্তকরণ",
     "team.areas.ananya": "সংকেত প্রক্রিয়াজাতকরণ",
     "team.areas.neeraj": "শ্রাবণ স্নায়ুবিজ্ঞান, সিগন্যাল প্রসেসিং",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "স্পিকার স্বীকৃতি",
     "team.areas.rohit": "কন্ঠ সনান্তকরণ",
     "team.areas.shreyas": "স্পিকার স্বীকৃতি, মেশিন লার্নিং",
