--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -36,14 +36,15 @@
 	"name.pkg": "Dr. Prasanta Kumar Ghosh",
 	"name.anand": "Anand Mohan",
 	"name.ananya": "Ananya Muguli",
+	"name.lancelot": "Dr. Lancelot Mark Pinto",
 	"name.neeraj": "Dr. Neeraj Sharma",
 	"name.prashant": "Prashant Krishnan",
 	"name.nirmala": "Dr. R Nirmala",
-	"name.raksheet": "Raksheet Bhat",
 	"name.rohit": "Rohit Kumar",
 	"name.shreyas": "Shreyas Ramoji",
 	"name.srikanth": "Srikanth Raj Chetupalli",
-	"place.iisc": "IISc Bangalore",
+	"place.iisc": "IISc, Bangalore",
+	"place.hinduja": "P.D. Hinduja Hospital, Mumbai",
 	"place.cmu": "CMU, USA",
 	"place.cogknit": "Cogknit Semantics",
 	"place.upgrad": "upGrad",
@@ -55,6 +56,7 @@
 	"team.title.mtech_sp": "MTech(Signal Processing)",
 	"team.title.post_doc": "Postdoctoral Fellow",
 	"team.title.mo": "Medical Officer",
+	"team.title.resp": "Respirologist",
 	"team.title.sde": "Software Engineer",
 	"team.title.phd": "PhD Scholar",
 	"team.areas.sriram": "Speech Recognition, Deep Learning, Neuroscience",
@@ -63,8 +65,8 @@
 	"team.areas.ananya": "Signal Processing",
 	"team.areas.neeraj": "Auditory Neuroscience, Signal Processing",
 	"team.areas.prashant": "Speaker Recognition",
+	"team.areas.lancelot":"",
 	"team.areas.nirmala": "",
-	"team.areas.raksheet": "",
 	"team.areas.rohit": "Speech Recognition",
 	"team.areas.shreyas": "Speaker Recognition, Machine Learning",
 	"team.areas.srikanth": "Signal Processing, Speech Recognition"
