--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -35,14 +35,15 @@
 	"name.pkg": "डॉ प्रशांत कुमार घोष",
 	"name.anand": "आनंद मोहन",
 	"name.ananya": "अनन्या मुगुली",
+	"name.lancelot": "डॉ लैंसेलोट मार्क पिंटो",
 	"name.neeraj": "डॉ नीरज शर्मा",
 	"name.prashant": "प्रशांत कृष्णन",
 	"name.nirmala": "डॉ आर निर्मला",
-	"name.raksheet": "Raksheet भट्ट",
 	"name.rohit": "रोहित कुमार",
 	"name.shreyas": "श्रेयस रामोजी",
 	"name.srikanth": "श्रीकांत राज Chetupalli",
 	"place.iisc": "आईआईएससी बैंगलोर",
+	"place.hinduja": "पी.डी. हिंदुजा अस्पताल, मुंबई",
 	"place.cmu": "CMU, संयुक्त राज्य अमेरिका",
 	"place.cogknit": "Cogknit शब्दार्थ",
 	"place.upgrad": "upgrad",
@@ -54,6 +55,7 @@
 	"team.title.mtech_sp": "एमटेक (सिग्नल प्रोसेसिंग)",
 	"team.title.post_doc": "पोस्टडॉक्टोरल सदस्य",
 	"team.title.mo": "चिकित्सा अधिकारी",
+	"team.title.resp": "Respirologist",
 	"team.title.sde": "सॉफ्टवेयर इंजीनियर",
 	"team.title.phd": "पीएचडी स्कॉलर",
 	"team.areas.sriram": "वाक् पहचान, दीप लर्निंग, तंत्रिका विज्ञान",
@@ -61,6 +63,8 @@
 	"team.areas.anand": "वाक् पहचान",
 	"team.areas.ananya": "सिग्नल प्रोसेसिंग",
 	"team.areas.neeraj": "श्रवण तंत्रिका विज्ञान, सिग्नल प्रोसेसिंग",
+	"team.areas.lancelot":"",
+	"team.areas.nirmala": "",
 	"team.areas.prashant": "अध्यक्ष मान्यता",
 	"team.areas.rohit": "वाक् पहचान",
 	"team.areas.shreyas": "अध्यक्ष मान्यता, मशीन लर्निंग",
