--- a/src/assets/i18n/ka-IN.json
+++ b/src/assets/i18n/ka-IN.json
@@ -35,14 +35,15 @@
     "name.pkg": "ಡಾ Prasanta ಕುಮಾರ್ ಘೋಷ್",
     "name.anand": "ಆನಂದ್ ಮೋಹನ್",
     "name.ananya": "ಅನನ್ಯಾ ಮುಗುಲಿ",
+    "name.lancelot": "ಡಾ ಲ್ಯಾನ್ಸೆಲಾಟ್ ಮಾರ್ಕ್ ಪಿಂಟೊ",
     "name.neeraj": "ಡಾ ನೀರಜ್ ಶರ್ಮಾ",
     "name.prashant": "ಪ್ರಶಾಂತ್ ಕೃಷ್ಣನ್",
     "name.nirmala": "ಡಾ ಆರ್ ನಿರ್ಮಲಾ",
-    "name.raksheet": "Raksheet ಭಟ್",
     "name.rohit": "ರೋಹಿತ್ ಕುಮಾರ್",
     "name.shreyas": "ಶ್ರೇಯಸ್ ರಾಮೋಜಿ",
     "name.srikanth": "ಶ್ರೀಕಾಂತ್ ರಾಜ್ Chetupalli",
     "place.iisc": "ಅಟ್ IISc ಬೆಂಗಳೂರು",
+    "place.hinduja": "ಪಿ.ಡಿ. ಹಿಂದೂಜಾ ಆಸ್ಪತ್ರೆ, ಮುಂಬೈ",
     "place.cmu": "ಸಿಎಮ್ಯು, ಅಮೇರಿಕಾ",
     "place.cogknit": "Cogknit ಶಬ್ದಾರ್ಥಗಳು",
     "place.upgrad": "upGrad",
@@ -54,6 +55,7 @@
     "team.title.mtech_sp": "MTech (ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್)",
     "team.title.post_doc": "ಪೋಸ್ಟ್ಡಾಕ್ಟೊರಲ್ ಫೆಲೋ",
     "team.title.mo": "ವೈದ್ಯಕೀಯ ಅಧಿಕಾರಿ",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "ಸಾಫ್ಟ್ವೇರ್ ಇಂಜಿನಿಯರ್",
     "team.title.phd": "ಪಿಎಚ್ಡಿ ಸ್ಕಾಲರ್",
     "team.areas.sriram": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್, ಡೀಪ್ ಕಲಿಕೆ, ನ್ಯೂರೋಸೈನ್ಸ್",
@@ -61,6 +63,8 @@
     "team.areas.anand": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
     "team.areas.ananya": "ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
     "team.areas.neeraj": "ಆಡಿಟರಿ ನ್ಯೂರೋಸೈನ್ಸ್, ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ",
     "team.areas.rohit": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
     "team.areas.shreyas": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ, ಮೆಷೀನ್ ಲರ್ನಿಂಗ್",
