--- a/src/assets/i18n/ml-IN.json
+++ b/src/assets/i18n/ml-IN.json
@@ -34,14 +34,15 @@
     "name.pkg": "ഡോ പ്രശാന്ത കുമാർ ഘോഷ്",
     "name.anand": "ആനന്ദ് മോഹൻ",
     "name.ananya": "അനന്യ മുഗുലി",
+    "name.lancelot": "ഡോ ലാൻ‌സെലോട്ട് മാർക്ക് പിന്റോ",
     "name.neeraj": "ഡോ നീരജ് ശർമ",
     "name.prashant": "പ്രശാന്ത് കൃഷ്ണൻ",
     "name.nirmala": "ഡോ ആർ നിർമ്മല",
-    "name.raksheet": "രക്ശെഎത് ഭട്ട്",
     "name.rohit": "രോഹിത് കുമാർ",
     "name.shreyas": "ശ്രേയസ് റാമോജി",
     "name.srikanth": "ശ്രീകാന്ത് രാജ് ഛെതുപല്ലി",
     "place.iisc": "ഐഐഎസ് ബാംഗ്ലൂർ",
+    "place.hinduja": "പി.ജി. ഹിന്ദുജ ആശുപത്രി, മുംബൈ",
     "place.cmu": "കഥയിലൂടെ, യുഎസ്എ",
     "place.cogknit": "ചൊഗ്ക്നിത് സെമാന്റിക്കുകൾ",
     "place.upgrad": "ഉപ്ഗ്രദ്",
@@ -53,6 +54,7 @@
     "team.title.mtech_sp": "എം.ടെക് (സിഗ്നൽ പ്രോസസിംഗ്)",
     "team.title.post_doc": "ബിരുദാനന്തര ഫെലോ",
     "team.title.mo": "മെഡിക്കൽ ഓഫീസർ",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "സോഫ്റ്റ്വെയർ എൻജിനീയർ",
     "team.title.phd": "പിഎച്ച്ഡി സ്കോളർ",
     "team.areas.sriram": "സംഭാഷണം തിരിച്ചറിയൽ, ഡീപ് പഠന, ന്യൂറോസയൻസ്",
@@ -60,6 +62,8 @@
     "team.areas.anand": "സംഭാഷണം തിരിച്ചറിയൽ",
     "team.areas.ananya": "സിഗ്നൽ പ്രോസസിംഗ്",
     "team.areas.neeraj": "ഓഡിറ്ററി ന്യൂറോസയൻസ്, സിഗ്നൽ പ്രോസസിംഗ്",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "സ്പീക്കർ തിരിച്ചറിയൽ",
     "team.areas.rohit" : "സംഭാഷണം തിരിച്ചറിയൽ",
     "team.areas.shreyas": "സ്പീക്കർ തിരിച്ചറിയൽ, മെഷീൻ ലേണിംഗ്",
