--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -35,14 +35,15 @@
     "name.pkg": "డాక్టర్ ప్రశాంత కుమార్ ఘోష్",
     "name.anand": "ఆనంద్ మోహన్",
     "name.ananya": "అనన్య ముగులి",
+    "name.lancelot": "లాన్సెలాట్ మార్క్ పింటో",
     "name.neeraj": "డాక్టర్ నీరజ్ శర్మ",
     "name.prashant": "ప్రశాంత్ కృష్ణన్",
     "name.nirmala": "డాక్టర్ R. నిర్మలా",
-    "name.raksheet": "రక్షీత్ భట్",
     "name.rohit": "రోహిత్ కుమార్",
     "name.shreyas": "శ్రేయాస్ రామోజీ",
     "name.srikanth": "శ్రీకాంత్ రాజ్ చెటుపల్లి",
     "place.iisc": "భా.వి.సం. బెంగళూరు",
+    "place.hinduja": "పి.డి. హిందూజా హాస్పిటల్, ముంబై",
     "place.cmu": "సి.ఎం.యూ., యూ.ఎస్.ఏ",
     "place.cogknit": "Cogknit సెమాంటిక్స్",
     "place.upgrad": "upGrad",
@@ -54,6 +55,7 @@
     "team.title.mtech_sp": "M. Tech (సిగ్నల్ ప్రాసెసింగ్)",
     "team.title.post_doc": "పోస్ట్ డాక్టోరల్ ఫెలో",
     "team.title.mo": "మెడికల్ ఆఫీసర్",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "సాఫ్ట్వేర్ ఇంజనీర్",
     "team.title.phd": "పీ.హెచ్.డి. స్కాలర్",
     "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ లెర్నింగ్, న్యూరోసైన్స్",
@@ -61,6 +63,8 @@
     "team.areas.anand": "స్పీచ్ రికగ్నిషన్",
     "team.areas.ananya": "సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.neeraj": "ఆడిటరీ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "స్పీకర్ రికగ్నిషన్",
     "team.areas.rohit": "స్పీచ్ రికగ్నిషన్",
     "team.areas.shreyas": "స్పీకర్ రికగ్నిషన్, మెషిన్ లెర్నింగ్",
