--- a/src/assets/i18n/ma-IN.json
+++ b/src/assets/i18n/ma-IN.json
@@ -35,14 +35,15 @@
     "name.pkg": "डॉ प्रशांतचंद्र कुमार घोष",
     "name.anand": "आनंद मोहन",
     "name.ananya": "अनन्या मुगुली",
+    "name.lancelot": "डॉ लान्सलॉट मार्क पिंटो",
     "name.neeraj": "डॉ नीरज शर्मा",
     "name.prashant": "प्रशांत कृष्णन",
     "name.nirmala": "डॉ आर निर्मला",
-    "name.raksheet": "Raksheet भट",
     "name.rohit": "रोहित कुमार",
     "name.shreyas": "श्रेयस Ramoji",
     "name.srikanth": "श्रीकांत राज Chetupalli",
     "place.iisc": "आयआयएससी बंगलोर",
+    "place.hinduja": "पी.डी. हिंदुजा हॉस्पिटल, मुंबई",
     "place.cmu": "CMU, यूएसए",
     "place.cogknit": "Cogknit Semantics",
     "place.upgrad": "upGrad",
@@ -54,6 +55,7 @@
     "team.title.mtech_sp": "MTech (सिग्नल प्रोसेसिंग)",
     "team.title.post_doc": "डॉक्टरेट फेलो",
     "team.title.mo": "वैद्यकीय अधिकारी",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "सोफ्टवेअर अभियंता",
     "team.title.phd": "पीएचडी स्कॉलर",
     "team.areas.sriram": "उच्चार ओळख, दीप शिक्षण, मेंदूचा अभ्यास",
@@ -61,6 +63,8 @@
     "team.areas.anand": "उच्चार ओळख",
     "team.areas.ananya": "सिग्नल प्रोसेसिंग",
     "team.areas.neeraj": "ऑडिटरी मेंदूचा अभ्यास, सिग्नल प्रोसेसिंग",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "स्पीकर ओळख",
     "team.areas.rohit": "उच्चार ओळख",
     "team.areas.shreyas": "स्पीकर ओळख, मशीन शिक्षण",
