--- a/src/assets/i18n/ta-IN.json
+++ b/src/assets/i18n/ta-IN.json
@@ -35,14 +35,15 @@
     "name.pkg": "டாக்டர் பிரசாந்தா குமார் கோஷ்",
     "name.anand": "ஆனந்த் மோகன்",
     "name.ananya": "அனன்யா முகுலி",
+    "name.lancelot": "லான்சலோட் மார்க் பிண்டோ",
     "name.neeraj": "டாக்டர் நீரஜ் சர்மா",
     "name.prashant": "பிரசாந்த் கிருஷ்ணன்",
     "name.nirmala": "டாக்டர் ஆர் நிர்மலா",
-    "name.raksheet": "Raksheet பட்",
     "name.rohit": "ரோஹித் குமார்",
     "name.shreyas": "ஸ்ரேயஸ் ராமோஜி",
     "name.srikanth": "ஸ்ரீகாந்த் ராஜ் Chetupalli",
     "place.iisc": "ஐஐஎஸ்சி பெங்களூருவில்",
+    "place.hinduja": "பி.டி. இந்துஜா மருத்துவமனை, மும்பை",
     "place.cmu": "சீ.எம்.யூ, அமெரிக்கா",
     "place.cogknit": "Cogknit செமாண்டிக்ஸ்",
     "place.upgrad": "upGrad",
@@ -54,6 +55,7 @@
     "team.title.mtech_sp": "எம்.டெக் (சிக்னல் ப்ராசசிங்)",
     "team.title.post_doc": "முதுகலை டாக்டர் அவர்",
     "team.title.mo": "மருத்துவ அதிகாரி",
+    "team.title.resp": "Respirologist",
     "team.title.sde": "மென்பொருள் பொறியாளர்",
     "team.title.phd": "பிஎச்டி ஸ்காலர்",
     "team.areas.sriram": "பேச்சு அறிதல், டீப் கற்றல், நரம்பியல்",
@@ -61,6 +63,8 @@
     "team.areas.anand": "பேச்சு அறிதல்",
     "team.areas.ananya": "சிக்னல் ப்ராசசிங்",
     "team.areas.neeraj": "ஆடிட்டரி நரம்பியல், சிக்னல் ப்ராசசிங்",
+    "team.areas.lancelot":"",
+	"team.areas.nirmala": "",
     "team.areas.prashant": "சபாநாயகர் அங்கீகாரம்",
     "team.areas.rohit": "பேச்சு அறிதல்",
     "team.areas.shreyas": "சபாநாயகர் ரிகாக்னிஷன், மெஷின் லேர்னிங்",
