Added support for es-US

--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -7,6 +7,7 @@
     "language.malayalam":"മലയാളം",
     "language.telugu":"తెలుగు",
     "language.bengali":"বাংলা",
+    "language.spanish": "Español",
     "app.title": "coswara",
     "metadata.title.no_metadata": "আমরা চালিয়ে করতে কিছু তথ্য দরকার!",
     "metadata.tabs.disclaimer": "দাবি পরিত্যাগী",
