--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -7,6 +7,7 @@
     "language.malayalam":"മലയാളം",
     "language.telugu":"తెలుగు",
     "language.bengali":"বাংলা",
+    "language.spanish": "Español",
     "app.title": "coswara",
     "metadata.title.no_metadata": "सुरू ठेवण्यासाठी आम्हाला काही माहिती हवी आहे!",
     "metadata.tabs.disclaimer": "ओळख",
