--- a/projects/collect/src/assets/i18n/ta-IN.json
+++ b/projects/collect/src/assets/i18n/ta-IN.json
@@ -7,6 +7,7 @@
     "language.malayalam":"മലയാളം",
     "language.telugu":"తెలుగు",
     "language.bengali":"বাংলা",
+    "language.spanish": "Español",
 	"app.title": "coswara",
 	"metadata.title.no_metadata": "நாம் தொடர சில தகவல்கள் தேவை!",
  "metadata.tabs.disclaimer": "மறுப்பு",
