--- a/src/assets/i18n/bn-IN.json
+++ b/src/assets/i18n/bn-IN.json
@@ -9,6 +9,7 @@
     "language.malayalam": "മലയാളം",
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
+    "language.spanish": "Español",
     "home.button.read": "Read more",
     "home.button.record": "এগিয়ে যাওয়ার জন্য তথ্য রেকর্ডিং",
     "home.content": "<a href=\"https://www.iisc.ac.in\" লক্ষ্য=\"_\"> ইন্ডিয়ান ইন্সটিটিউট অফ সায়েন্স দ্বারা প্রকল্প Coswara (IISc) বেঙ্গালুরু </a> Covid -19 একটি ডায়গনিস্টিক সরঞ্জাম গড়ে তুলতে চেষ্টা করা হয় শ্বাসযন্ত্রের, কাশি এবং বাক শব্দসমূহ উপর ভিত্তি করে। প্রকল্পের এখন তথ্য সংগ্রহ পর্যায়ে রয়েছে। এটা তোলে অংশগ্রহণকারীদের শ্বাস শব্দ, কাশি শব্দ, স্বরবর্ণ শব্দসমূহ টেকসই phonation এবং বেড়ে চলেছে ব্যায়াম যা আপনার সময় প্রায় 5-7 মিনিট সময় লাগে একটি রেকর্ডিং প্রদান প্রয়োজন। কোনও ব্যক্তিগতভাবে সনাক্তকরণযোগ্য তথ্য অংশগ্রহণকারীদের কাছ থেকে সংগ্রহ করা হয়।",
