--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -9,6 +9,7 @@
 	"language.malayalam": "മലയാളം",
 	"language.telugu": "తెలుగు",
 	"language.bengali": "বাংলা",
+	"language.spanish": "Español",
 	"home.button.read": "अधिक पढ़ें",
 	"home.button.record": "आगे बढ़ने के लिए डेटा की रिकॉर्डिंग",
 	"home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> भारतीय विज्ञान संस्थान द्वारा परियोजना Coswara (आईआईएससी) बंगलौर </a> Covid -19 के लिए एक नैदानिक \u200b\u200bउपकरण का निर्माण करने का प्रयास है श्वसन, खाँसी और भाषण ध्वनियों पर आधारित है। परियोजना अब डेटा संग्रह चरण में है। यह प्रतिभागियों सांस लेने लगता है, खांसी लगता है, स्वर लगता है की निरंतर स्वर निर्माण और एक गिनती व्यायाम जो अपने समय के 5-7 मिनट लगते हैं की एक रिकॉर्डिंग उपलब्ध कराने के लिए की आवश्यकता है। कोई व्यक्तिगत पहचान डेटा प्रतिभागियों से एकत्र किया जाता है।",
