--- a/src/assets/i18n/ka-IN.json
+++ b/src/assets/i18n/ka-IN.json
@@ -9,6 +9,7 @@
     "language.malayalam": "മലയാളം",
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
+    "language.spanish": "Español",
     "home.button.read": "ಮತ್ತಷ್ಟು ಓದು",
     "home.button.record": "ದತ್ತಾಂಶವನ್ನು ರೆಕಾರ್ಡ್ ಮುಂದುವರೆಸಿ",
     "home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> ಭಾರತೀಯ ವಿಜ್ಞಾನ ಸಂಸ್ಥೆ ಪ್ರಾಜೆಕ್ಟ್ Coswara (ಐಐಎಸ್ಸಿ) ಬೆಂಗಳೂರು </a> Covid -19 ಒಂದು ರೋಗನಿರ್ಣಯದ ಸಾಧನವಾಗಿ ನಿರ್ಮಿಸಲು ಒಂದು ಪ್ರಯತ್ನವಾಗಿದೆ ಉಸಿರಾಟದ, ಕೆಮ್ಮು ಮತ್ತು ಭಾಷಣ ಶಬ್ದಗಳ ಆಧರಿಸಿ. ಯೋಜನೆಯನ್ನು ಈಗ ಡೇಟಾ ಸಂಗ್ರಹಣೆ ಹಂತದಲ್ಲಿದೆ. ಇದು ಉಸಿರಾಟದ ಶಬ್ದಗಳ, ಕೆಮ್ಮು ಶಬ್ದಗಳು, ಸ್ವರ ಧ್ವನಿಗಳು ನಿರಂತರ phonation ಮತ್ತು ನಿಮ್ಮ ಸಮಯ ಸುಮಾರು 5-7 ನಿಮಿಷಗಳ ತೆಗೆದುಕೊಳ್ಳುತ್ತದೆ ಎಣಿಕೆಯ ವ್ಯಾಯಾಮದ ಒಂದು ರೆಕಾರ್ಡಿಂಗ್ ಒದಗಿಸಲು ಭಾಗವಹಿಸುವವರು ಅಗತ್ಯವಿದೆ. ಯಾವುದೇ ವೈಯಕ್ತಿಕವಾಗಿ ಗುರುತಿಸಬಹುದಾದ ಮಾಹಿತಿ ಭಾಗವಹಿಸುವವರು ಶೇಖರಿಸಲಾಗುವುದು.",
