--- a/src/assets/i18n/ma-IN.json
+++ b/src/assets/i18n/ma-IN.json
@@ -9,6 +9,7 @@
     "language.malayalam": "മലയാളം",
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
+    "language.spanish": "Español",
     "home.button.read": "पुढे वाचा",
     "home.button.record": "डेटा रेकॉर्डिंग पुढे चालू ठेवा",
     "home.content": "विज्ञान <a href=\"https://www.iisc.ac.in\" target=\"_blank\"> इंडियन इन्स्टिट्यूट ऑफ प्रकल्प Coswara (आयआयएससी) बंगलोर </a> साठी Covid-19 एक निदान साधन तयार करण्याचा एक प्रयत्न आहे श्वसन, खोकला आणि भाषण आवाज आधारित. प्रकल्प आता डेटा संकलन टप्प्यात आहे. तो श्वास ध्वनी, खोकला नाद, स्वर नाद निरंतर अर्थपूर्ण ध्वनी काढण्याची कला आणि वेळ सुमारे 5-7 मिनिटे लागतात जे मोजणी व्यायाम रेकॉर्डिंग प्रदान करण्यासाठी सहभागी आवश्यक आहे. कोणत्याही वैयक्तिकरित्या ओळखण्यायोग्य डेटा सहभागी गोळा केला जातो.",
