--- a/src/assets/i18n/ml-IN.json
+++ b/src/assets/i18n/ml-IN.json
@@ -8,6 +8,7 @@
     "language.malayalam": "മലയാളം",
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
+    "language.spanish": "Español",
     "home.button.read": "കൂടുതല് വായിക്കുക",
     "home.button.record": "ഡാറ്റ റെക്കോർഡിംഗ് തുടരുക",
     "home.content": "<a ഹ്രെഫ്=\"ഹ്ത്ത്പ്സ്://വ്വ്വ്.ഇഇസ്ച്.അച്.ഇന്\" target=\"_blank\"> ഇന്ത്യൻ ഇൻസ്റ്റിറ്റിയൂട്ട് ഓഫ് സയൻസ് (ഐഐഎസ്) ബാംഗ്ലൂർ </a> സംരംഭങ്ങളെ ചൊസ്വര ചൊവിദ്-19 ഒരു ഡയഗണോസ്റ്റിക് ഉപകരണം പണിയാൻ ഒരു ശ്രമമാണ് ശ്വാസകോശ, ചുമ, സ്പീച്ച് ശബ്ദങ്ങൾ അടിസ്ഥാനമാക്കി. പദ്ധതി ഇപ്പോൾ ഡാറ്റ ശേഖരണം ഘട്ടത്തിൽ ആണ്. അത് ശ്വസിക്കുന്ന ശബ്ദങ്ങൾ, ചുമ ശബ്ദങ്ങൾ, സ്വരാക്ഷര ശബ്ദങ്ങൾ സുസ്ഥിര ഫൊനതിഒന് നിങ്ങളുടെ സമയം ഏകദേശം 5-7 മിനിറ്റ് എടുക്കും ഒരു വർദ്ധിച്ചുകൊണ്ടിരിക്കുന്നു വ്യായാമം ഒരു റെക്കോർഡിംഗ് നൽകാൻ പങ്കെടുക്കുന്നവരെ ആവശ്യമാണ്. വ്യക്തിപരമായി തിരിച്ചറിയാനാകുന്ന ഡാറ്റ പങ്കെടുക്കുന്നവർ നിന്ന് ശേഖരിക്കപ്പെടുന്ന.",
