--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -9,6 +9,7 @@
     "language.malayalam": "മലയാളം",
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
+    "language.spanish": "Español",
     "home.button.read": "ఇంకా చదవండి",
     "home.button.record": "డేటా రికార్డింగ్ కి కొనసాగండి",
     "home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> భారతీయ విజ్ఞాన సంస్థ (IISc) బెంగళూరు </a> వారి ప్రాజెక్ట్ కోస్వర, Covid-19 నిర్ధారణ కోసం శ్వాస, దగ్గు మరియు మాటల శబ్దాల ఆధారంగా ఒక విశ్లేషణ విధానం నిర్మించడానికి ఒక ప్రయత్నం. ప్రస్తుతం ఈ ప్రాజెక్ట్ డేటా సేకరణ దశలో ఉంది. ఇది పాల్గొనే వారి నుండి శ్వాస శబ్దాలు, దగ్గు శబ్దాలు, అచ్చు శబ్దాల నిరంతర ఉచ్ఛారణ మరియు అంకెల గణన కోరుతుంది, మరియు రికార్డింగ్ పూర్తి చేయడానికి కేవలం 5-7 నిమిషాల సమయం పడుతుంది. డేటా సేకరణ లో పాల్గొనే వారినుండి వ్యక్తిగతంగా గుర్తించగల ఏ విధమైన సమాచారాన్నీ సేకరించడం లేదు.",
