--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -7,6 +7,7 @@
 	"language.malayalam":"മലയാളം",
 	"language.telugu":"తెలుగు",
 	"language.bengali":"বাংলা",
+	"language.spanish": "Español",
 "app.title": "coswara",
 "metadata.title.no_metadata": "हमें कुछ जानकारी चाहिए !",
 "metadata.tabs.disclaimer": "अस्वीकरण",
