--- a/projects/collect/src/assets/i18n/ml-IN.json
+++ b/projects/collect/src/assets/i18n/ml-IN.json
@@ -7,6 +7,7 @@
     "language.malayalam":"മലയാളം",
     "language.telugu":"తెలుగు",
     "language.bengali":"বাংলা",
+    "language.spanish": "Español",
     "app.title": "ചൊസ്വര",
  "metadata.title.no_metadata": "നാം തുടരുന്നതിന് ചില വിവരങ്ങൾ കൂടി ആവശ്യമാണ്!",
  "metadata.tabs.disclaimer": "നിരാകരണം",
